# quectel-timesync

./: CMakeLists.txt  README.md  quectel-timesync.c
luci-app-quectel-timesync/: Makefile
luci-app-quectel-timesync/root/usr/share/luci-static/resources/view/quectel-timesync/: form.js
luci-app-quectel-timesync/root/usr/share/luci/menu.d/: luci-app-quectel-timesync.json
luci-app-quectel-timesync/root/usr/share/rpcd/acl.d/: luci-app-quectel-timesync.json
openwrt/quectel-timesync/: Makefile
openwrt/quectel-timesync/files/etc/config/: quectel-timesync
openwrt/quectel-timesync/files/etc/init.d/: quectel-timesync
openwrt/quectel-timesync/src/: quectel-timesync.c
